<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_black"
    android:padding="8dp"
    tools:context=".ui.fragments.progress.DetailScoreFragment">

    <!-- ********************** Filter by course and topic (Third screen) ********************** -->
    <TextView
        android:id="@+id/tv_star_1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/star"
        android:textAlignment="center"
        android:textColor="@color/dark_red"
        android:textSize="22sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/tv_choose_course"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_choose_course" />

    <TextView
        android:id="@+id/tv_choose_course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="62dp"
        android:layout_marginBottom="8dp"
        android:text="@string/tv_choose_course"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/spinner_choose_course"
        app:layout_constraintStart_toEndOf="@+id/tv_star_1" />

    <Spinner
        android:id="@+id/spinner_choose_course"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bg_spinner"
        android:contentDescription="@string/spinner_course_content_desc"
        android:popupBackground="@drawable/bg_spinner"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/guideline13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/iv_dropdown_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/iv_drop_down_desc"
        android:src="@drawable/ic_drop_down"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_choose_course"
        app:layout_constraintEnd_toEndOf="@+id/spinner_choose_course"
        app:layout_constraintTop_toTopOf="@+id/spinner_choose_course" />

    <TextView
        android:id="@+id/tv_star_2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/star"
        android:textAlignment="center"
        android:textColor="@color/dark_red"
        android:textSize="22sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/tv_choose_topic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_choose_topic" />

    <TextView
        android:id="@+id/tv_choose_topic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tv_choose_topic"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/tv_star_2"
        app:layout_constraintTop_toBottomOf="@+id/guideline13" />

    <Spinner
        android:id="@+id/spinner_choose_topic"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_spinner"
        android:contentDescription="@string/spinner_topic_content_desc"
        android:popupBackground="@drawable/bg_spinner"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_choose_topic" />

    <ImageView
        android:id="@+id/iv_dropdown_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/iv_drop_down_desc"
        android:src="@drawable/ic_drop_down"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_choose_topic"
        app:layout_constraintEnd_toEndOf="@+id/spinner_choose_topic"
        app:layout_constraintTop_toTopOf="@+id/spinner_choose_topic" />

    <Button
        android:id="@+id/btn_filter_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_filter_result"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_go_back"
        app:layout_constraintTop_toBottomOf="@+id/spinner_choose_topic" />

    <Button
        android:id="@+id/btn_go_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_back"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/btn_filter_results"
        app:layout_constraintStart_toEndOf="@+id/btn_filter_results"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_choose_topic" />
    <!-- ********************** End Filter by course and topic ********************** -->

    <!-- ********************** Choose filter (Second screen) ********************** -->
    <TextView
        android:id="@+id/tv_filter_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/tv_filter_result_by"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/guideline13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/rg_filter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline13"
        app:layout_constraintVertical_bias="0.05">

        <RadioButton
            android:id="@+id/rb_filter_by_overall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_by_overall"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_filter_by_mixed_quiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_by_mixed_quiz"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_filter_by_course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_by_course"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_filter_by_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_by_topic"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RadioGroup>
    <!-- ********************** END Choose filter ********************** -->

    <!-- ********************** First screen (graph) ********************** -->
    <TextView
        android:id="@+id/tv_choose_filter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:padding="8dp"
        android:text="@string/tv_filter"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <View
        android:id="@+id/view1"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_choose_filter" />

    <TextView
        android:id="@+id/tv_graph_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view1"
        tools:text="Graph description" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/line_chart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_average_score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_graph_description" />

    <TextView
        android:id="@+id/tv_average_score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:text="@string/overall_score"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="italic"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <!-- ********************** END First screen (graph) ********************** -->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />
</androidx.constraintlayout.widget.ConstraintLayout>